www/card.css
body {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    background-color: #f5f5f5;
    background-image: url('desk.jpeg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center bottom;
}

.card {
    margin: 20px;
    width: 300px;
    height: 500px;
    background: linear-gradient(to bottom, #c09a61, #4a2c16);
    border-radius: 16px;
    border: 16px ridge #F5D39D ;
    position: relative;
    color: #fff;
    font-family: Arial, sans-serif;
    text-align: center;
    box-shadow: 0px 0px 20px #21211c;
    overflow: hidden;
}

.rating {
    position: absolute;
    top: -8px;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    height: 40px;
    width: 40px;
    line-height: 40px;
    text-align: center;
    font-weight: bold;
    color: whitesmoke;
}

.rating:before {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    transform: rotateX(45deg) rotateZ(45deg);
    box-shadow: 0px 0px 12px gray;
    background-color: #4a2c16;
    z-index: -1;
}

.rating:after {
    position: absolute;
    top: -4px;
    left: -4px;
    content: '';
    height: calc(100% - 12px); /* -22px is 2 * 10px gap on either side - 2px border on either side */
    width: calc(100% - 12px); /* -22px is 2 * 10px gap on either side - 2px border on either side */
    border: 10px ridge #F5D39D;
    transform: rotateX(45deg) rotateZ(45deg);
}


.image {
    height: 250px;
    background-color: #000;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

.title {
    padding: 10px;
    font-size: 1.5em;
    font-weight: bold;
    background-color: #1D1C0E;
    color: whitesmoke;
    border-top: 10px ridge #F5D39D;
    border-bottom: 10px ridge #F5D39D;
}

.description {
    margin: 10px;
    font-size: 1em;
    padding: 0;
}

